<resources>
    <string name="app_name">EPUB Reader</string>
    <string name="app_name_short">EPUB Reader</string>
    <string name="open_epub">Open EPUB</string>
    <string name="select_epub_file">Select EPUB File</string>
    <string name="no_epub_selected">No EPUB file selected</string>
    <string name="select_file">Select File</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="speed">Speed</string>
    <string name="speed_normal">Normal</string>
    <string name="speed_fast">Fast</string>
    <string name="speed_slow">Slow</string>
    <string name="tts_settings">TTS Settings</string>
    <string name="voice_settings">Voice Settings</string>
    <string name="speech_rate">Speech Rate</string>
    <string name="pitch">Pitch</string>
    <string name="volume">Volume</string>
    <string name="language">Language</string>
    <string name="select_voice">Select Voice</string>
    <string name="tts_playing">Playing…</string>
    <string name="tts_paused">Paused</string>
    <string name="tts_stopped">Stopped</string>
    <string name="no_tts_engine">No TTS engine found</string>
    <string name="permission_storage_denied">Storage permission denied</string>
    <string name="permission_storage_rationale">We need storage permission to read EPUB files</string>
    <string name="permission_notification_denied">Notification permission denied</string>
    <string name="permission_notification_rationale">We need notification permission for TTS playback controls</string>
    <string name="no_epub_files">No EPUB files found</string>
    <string name="error_loading_epub">Error loading EPUB</string>
    <string name="error_tts">TTS Error</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="chapter">Chapter</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="font_size">Font Size</string>
    <string name="theme">Theme</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_sepia">Sepia</string>
    <string name="night_mode">Night Mode</string>
    <string name="scroll_mode">Scroll Mode</string>
    <string name="page_mode">Page Mode</string>
    <string name="tts_foreground_service_title">EPUB Reader TTS</string>
    <string name="tts_foreground_service_description">Reading aloud: %1$s</string>
    <string name="tts_notification_channel_id">tts_channel</string>
    <string name="tts_notification_channel_name">TTS Playback</string>
    <string name="stop_tts">Stop TTS</string>
    <string name="tts_playing_content">Reading: %1$s</string>
    <string name="tts_toggle">TTS</string>
    <string name="tts_ready">Ready to play</string>
    <string name="tts_player">TTS Player</string>
    <string name="library">Library</string>
    <string name="recent">Recent</string>
    <string name="about_section">About</string>
    <string name="no_book_loaded">No book loaded</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="reading_settings">Reading Settings</string>
    <string name="tts_settings_title">TTS Settings</string>
    <string name="app_version">Version 1.0</string>
    <string name="previous_chapter">Previous Chapter</string>
    <string name="next_chapter">Next Chapter</string>
    <string name="play_pause">Play/Pause</string>
    <string name="search">Search</string>
    <string name="tts_toggle">TTS</string>
    <string name="tts_player">TTS Player</string>
    <string name="tts_ready">Ready to play</string>
    <string name="tts_settings">TTS Settings</string>
    <string name="tts_language">Language</string>
    <string name="tts_voice">Voice</string>
    <string name="tts_speech_rate">Speech Rate</string>
    <string name="tts_pitch">Pitch</string>
    <string name="tts_playback_speed">Playback Speed</string>
    <string name="tts_highlight_text">Highlight Current Text</string>
    <string name="tts_auto_scroll">Auto Scroll</string>
    <string name="tts_skip_footnotes">Skip Footnotes</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="sepia">Sepia</string>
    <string name="system">System</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="page">Page</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="justify">Justify</string>
    <string name="sans_serif">Sans Serif</string>
    <string name="serif">Serif</string>
    <string name="monospace">Monospace</string>
    <string name="noto_sans_sc">Noto Sans SC</string>
    <string name="noto_sans_tc">Noto Sans TC</string>
    <string name="noto_serif_sc">Noto Serif SC</string>
    <string name="noto_serif_tc">Noto Serif TC</string>
</resources>
