<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_open"
        android:icon="@android:drawable/ic_menu_upload"
        android:title="@string/open_epub"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toc"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/table_of_contents"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_tts"
        android:icon="@android:drawable/ic_media_play"
        android:title="@string/tts_toggle"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_tts_settings"
        android:title="@string/tts_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>
