<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/library" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="@string/recent" />
        <item
            android:id="@+id/nav_tts"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/tts_player" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/settings" />
    </group>

    <item android:title="@string/about_section">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about" />
        </menu>
    </item>
</menu>
